--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Jason Wheeler"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = ">=3.8.1,<4.0"
 langchain = "^0.0.166"
 python-dotenv = "^1.0.0"
 openai = "^0.27.6"
