--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
-name = "contractqa"
+name = "research-build"
 version = "0.6.0"
-description = "Web application for navigating contracts effortlessly."
+description = "Apollo research build."
 authors = ["Jason Wheeler"]
 readme = "README.md"
 
